@@ -25,10 +25,10 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -82,7 +82,7 @@ public class BookCommonServiceImpl implements BookCommonService {
 
                     return response;
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(bookListResponse, booksPage.getPageable(), booksPage.getTotalElements());
     }
@@ -104,6 +104,7 @@ public class BookCommonServiceImpl implements BookCommonService {
      * @return 도서 정보
      */
     @Override
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
     public BookInfoResponse getBook(Long bookId) {
         return addAssociatedDataToBookInfoResponse(bookRepository.findBookById(bookId));
     }
@@ -209,7 +210,7 @@ public class BookCommonServiceImpl implements BookCommonService {
 
         bookLikeRepository.save(bookLike);
 
-        //todo: 좋아요 수 잘 올라갔는지 확인하기
+
         return new BookLikeResponse(bookLikeRequest, bookRepository.findBookLikeByBookId(book.getBookId()));
     }
 
